implemented user profile page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@ body {
   padding:0!important; margin:0!important;
 }
 .background-box{
-  width:100%; min-height:100vh; margin:0;
+  width:100%; min-height:100vh; margin:0; padding-bottom:10px;
   background:linear-gradient(-135deg, white, rgb(186, 230, 255));
 }
 .error {color: red;}
