--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,34 @@
     <div class="user">
       <div class="user_inner">
         <img src="<%= "/user_images/#{@user.image_name}" %>">
-        <span class="user_name"><%= @user.name %></span>
+        <div class="user_name"><%= @user.name %></div>
+        <% if @user == current_user %>
+          <%= link_to "edit", edit_user_path(@user), :class=>"user_edit" %>
+        <% end %>
       </div>
     </div>
+
+    <% @posts.each do |post| %>
+      <div class="posts-index-item">
+        <div class="post-left">
+          <% @image = User.select("image_name").find_by(id: post.user_id) %>
+          <img src="<%= "/user_images/#{@image.image_name}" %>">
+        </div>
+        <div class="post-right">
+          <div class="post-user-name">
+            <% @user = User.select("name").find_by(id: post.user_id) %>
+            <%= link_to @user.name, user_path(post.user_id) %>
+          </div>
+          <div class="date">
+            <%= l(post.created_at, format: :short) %>
+          </div>
+          <%= link_to post.content, post_path(post), :class=> "post_content" %>
+        </div>
+        <% post.images.each do |post_photo| %>
+            <div class="post_photo" style="background:url('<%= post_photo %>') center / contain; background-repeat:no-repeat;"></div>
+        <% end %>
+      </div>
+    <% end %>
 
   </div>
 </div>
