implemented user edit page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
 
   <ul class="posts-tabs">
       <li class="active"><%= link_to("All", "/posts") %></li>
-      <li><%= link_to("Follows", "/posts/follows") %></li>
+      <li><%= link_to("Following", "/posts/follows") %></li>
   </ul>
 
   <% @posts_all.each do |post_all| %>
