--- a/app/views/posts/follows.html.erb
+++ b/app/views/posts/follows.html.erb
@@ -11,7 +11,7 @@
 
   <ul class="posts-tabs">
       <li><%= link_to("All", posts_path) %></li>
-      <li class="active"><%= link_to("Follows", follows_posts_path) %></li>
+      <li class="active"><%= link_to("Following", follows_posts_path) %></li>
   </ul>
 
   <% @posts_follows.each do |post_follows| %>
