--- a/app/views/posts/follows.html.erb
+++ b/app/views/posts/follows.html.erb
@@ -29,11 +29,25 @@
           <%= l(post_follows.created_at, format: :short) %>
         </div>
         <%= link_to post_follows.content, post_path(post_follows), :class=> "post_content" %>
-      </div>
-      <% post_follows.images.each do |post_photo| %>
+        <div>
+          <% post_follows.images.each do |post_photo| %>
           <div class="post_photo" style="background:url('<%= post_photo %>') center / contain; background-repeat:no-repeat;"></div>
-      <% end %>
+          <% end %>
+        </div>
+        <div class="fav">
+          <% if @fav_post = FavsPost.find_by(post_id: post_follows.id, user_id: current_user.id) %>
+          <%= link_to(post_favs_post_path(post_follows.id, @fav_post.id), :method => :delete) do %>
+          <i class="far fa-heart unlike-btn">like</i>
+          <% end %>
+          <% else %>
+          <%= link_to(post_favs_posts_path(post_follows.id), :method => :post) do %>
+          <i class="far fa-heart like-btn"></i>
+          <% end %>
+          <% end %>
+        </div>
+      </div>
     </div>
+  </div>
   <% end %>
 </div>
 </div>
