--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,10 +32,23 @@
             <%= l(post.created_at, format: :short) %>
           </div>
           <%= link_to post.content, post_path(post), :class=> "post_content" %>
-        </div>
-        <% post.images.each do |post_photo| %>
+          <div>
+            <% post.images.each do |post_photo| %>
             <div class="post_photo" style="background:url('<%= post_photo %>') center / contain; background-repeat:no-repeat;"></div>
-        <% end %>
+            <% end %>
+          </div>
+          <div class="fav">
+            <% if @fav_post = FavsPost.find_by(post_id: post.id, user_id: current_user.id) %>
+            <%= link_to(post_favs_post_path(post.id, @fav_post.id), :method => :delete) do %>
+            <i class="far fa-heart unlike-btn">like</i>
+            <% end %>
+            <% else %>
+            <%= link_to(post_favs_posts_path(post.id), :method => :post) do %>
+            <i class="far fa-heart like-btn"></i>
+            <% end %>
+            <% end %>
+          </div>
+        </div>
       </div>
     <% end %>
 
