css of fav button

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -69,6 +69,14 @@
 
 /* //home */
 
+/* fav */
+.fav {
+  .unlike-btn {color:rgb(241, 30, 68);}
+  .like-btn {color:gray}
+  .like-btn:hover {color:rgb(241, 30, 68);}
+}
+/* //fav */
+
 /* show */
 .show_post{
   .posts-index-item {
