--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -69,7 +69,7 @@
           <div class="fav">
               <% if @fav_comment = FavsComment.find_by(comment_id: comment.id, user_id: current_user.id) %>
               <%= link_to(post_comment_favs_comment_path(@post.id, comment.id, @fav_comment.id), :method => :delete) do %>
-              <i class="far fa-heart unlike-btn">like</i>
+              <i class="far fa-heart unlike-btn"></i>
               <% end %>
               <% else %>
               <%= link_to(post_comment_favs_comments_path(@post.id, comment.id), :method => :post) do %>
