--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,7 +37,7 @@
         <div class="fav">
           <% if @fav_post = FavsPost.find_by(post_id: post_all.id, user_id: current_user.id) %>
           <%= link_to(post_favs_post_path(post_all.id, @fav_post.id), :method => :delete) do %>
-          <i class="far fa-heart unlike-btn">like</i>
+          <i class="far fa-heart unlike-btn"></i>
           <% end %>
           <% else %>
           <%= link_to(post_favs_posts_path(post_all.id), :method => :post) do %>
