--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
           <div class="fav">
             <% if @fav_post = FavsPost.find_by(post_id: post.id, user_id: current_user.id) %>
             <%= link_to(post_favs_post_path(post.id, @fav_post.id), :method => :delete) do %>
-            <i class="far fa-heart unlike-btn">like</i>
+            <i class="far fa-heart unlike-btn"></i>
             <% end %>
             <% else %>
             <%= link_to(post_favs_posts_path(post.id), :method => :post) do %>
