implemented fav counts

--- a/app/views/posts/follows.html.erb
+++ b/app/views/posts/follows.html.erb
@@ -37,11 +37,17 @@
         <div class="fav">
           <% if @fav_post = FavsPost.find_by(post_id: post_follows.id, user_id: current_user.id) %>
           <%= link_to(post_favs_post_path(post_follows.id, @fav_post.id), :method => :delete) do %>
-          <i class="far fa-heart unlike-btn"></i>
+          <i class="far fa-heart unlike-btn">
+            <% @favs_count = FavsPost.where(post_id: post_follows.id).count %>
+            <% if @favs_count != 0 %><%= @favs_count %><% end %>
+          </i>
           <% end %>
           <% else %>
           <%= link_to(post_favs_posts_path(post_follows.id), :method => :post) do %>
-          <i class="far fa-heart like-btn"></i>
+          <i class="far fa-heart like-btn">
+            <% @favs_count = FavsPost.where(post_id: post_follows.id).count %>
+            <% if @favs_count != 0 %><%= @favs_count %><% end %>
+          </i>
           <% end %>
           <% end %>
         </div>
