--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,12 @@
   .logo img {
     height: 40px; padding:10px;
   }
+  .show_following {
+    position:absolute; right:200px; bottom:7px; color: white; font-size: 14px;
+  }
+  .show_followers {
+    position:absolute; right:120px; bottom:7px; color: white; font-size: 14px;
+  }
 }
 
 .user{
