--- a/app/assets/stylesheets/follows.scss
+++ b/app/assets/stylesheets/follows.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the follows controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.back_to_user {
+  position:absolute; left:15px; top: 15px;
+  color: white; text-decoration:none; font-size: 18px;
+}
