--- a/app/views/posts/follows.html.erb
+++ b/app/views/posts/follows.html.erb
@@ -17,7 +17,9 @@
     <div class="posts-index-item">
       <div class="post-left">
         <% @image = User.select("image_name").find_by(id: post_follows.user_id) %>
-        <img src="<%= "/user_images/#{@image.image_name}" %>">
+        <%= link_to user_path(post_follows.user_id) do %>
+          <img src="<%= "/user_images/#{@image.image_name}" %>">
+        <% end %>
       </div>
       <div class="post-right">
         <div class="post-user-name">
