--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,9 @@
     <div class="posts-index-item">
       <div class="post-left">
         <% @image = User.select("image_name").find_by(id: post_all.user_id) %>
-        <img src="<%= "/user_images/#{@image.image_name}" %>">
+        <%= link_to user_path(post_all.user_id) do %>
+          <img src="<%= "/user_images/#{@image.image_name}" %>">
+        <% end %>
       </div>
       <div class="post-right">
         <div class="post-user-name">
