--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,9 @@
       <div class="posts-index-item">
         <div class="post-left">
           <% @image = User.select("image_name").find_by(id: post.user_id) %>
-          <img src="<%= "/user_images/#{@image.image_name}" %>">
+          <%= link_to user_path(post.user_id) do %>
+            <img src="<%= "/user_images/#{@image.image_name}" %>">
+          <% end %>
         </div>
         <div class="post-right">
           <div class="post-user-name">
