--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,8 +74,6 @@ body {
 
 .forgot_password {color: #1da1f2;}
 
-
-
 /* header */
 .header{
   width:100%; height:60px; position:relative;
@@ -94,7 +92,7 @@ body {
 }
 .header .back_to_post {
   position:absolute; left:10px; top: 15px;
-  color: white; text-decoration:none;
+  color: white; text-decoration:none; font-size: 17px;
 }
 /* //header */
 
