--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,15 +2,40 @@
   .logo img {
     height: 40px; padding:10px;
   }
+  img.me {
+    position:absolute; right:10px; top:7px; width:45px; border-radius:50%;
+  }
   .show_following {
-    position:absolute; right:200px; bottom:7px; color: white; font-size: 14px;
+    position:absolute; right:250px; bottom:7px; color: white; font-size: 14px;
     font-weight: bold;
     a {text-decoration: none;}
   }
   .show_followers {
-    position:absolute; right:120px; bottom:7px; color: white; font-size: 14px;
+    position:absolute; right:170px; bottom:7px; color: white; font-size: 14px;
     font-weight: bold;
     a {text-decoration: none;}
+  }
+  a.new_post_user {
+    position:absolute; right:80px; top: 12px; padding:5px 10px;
+    border-radius:20px; background-color:white; color: #1da1f2;
+    text-decoration:none; font-weight:bold; transition:0.3s;
+  }
+  a.new_post_user:hover {opacity:0.8; /* transform: rotateX(360deg); */ }
+  a.following_btn {
+    position:absolute; right:62px; top: 12px; padding:5px 10px;
+    border-radius:20px; background-color:white; color: #1da1f2;
+    text-decoration:none; font-weight:bold; transition:0.3s;
+  }
+  a.following_btn:hover {opacity:0.8; /* transform: rotateX(360deg); */ }
+  a.follow_btn {
+    position:absolute; right:70px; top: 12px; padding:5px 10px;
+    border-radius:20px; background-color:white; color: #1da1f2;
+    text-decoration:none; font-weight:bold; transition:0.3s;
+  }
+  a.follow_btn:hover {opacity:0.8; /* transform: rotateX(360deg); */ }
+  .back {
+    position:absolute; left:20px; top: 15px;
+    color: white; text-decoration:none; font-size: 17px;
   }
 }
 
