--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,7 @@
   <div class="new_post">
   <div class="header">
     <span class="title">Create Post</span>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, :class=> "logout" %>
     <%= link_to posts_path, :class=>"back_to_posts" do %>
       <i class="fas fa-home"></i> <span class="home_button">Home</span>
     <% end %>
