--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
   <div class="show_post">
     <div class="header">
       <span class="title">Post</span>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class=> "logout" %>
       <%= link_to posts_path, :class=>"back_to_posts" do %>
         <i class="fas fa-home"></i> <span class="home_button">Home</span>
       <% end %>
