--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="edit_users">
     <div class="header">
       <span class="title">Edit Profile</span>
+      <%= link_to "back", user_path(params[:id]), :class=>"back"%>
       <%= link_to posts_path, :class=>"back_to_posts" do %>
         <i class="fas fa-home"></i> <span class="home_button">Home</span>
       <% end %>
