--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,14 @@
   <div class="show_users">
     <div class="header">
       <div class="logo"><img src="<%= "/duck.png" %>"></div>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class=> "logout" %>
       <%= link_to posts_path, :class=>"back_to_posts" do %>
         <i class="fas fa-home"></i> <span class="home_button">Home</span>
       <% end %>
       <% @user = User.find_by(id: params[:id])%>
-
+      <%= link_to user_path(current_user) do %>
+        <img class="me" src="<%= "/user_images/#{current_user.image_name}" %>">
+      <% end %>
       <%= link_to index_following_user_path(@user.id) do %>
         <div class="show_following">
           Following</br>
@@ -19,6 +22,14 @@
         Followers</br>
         <%= @followers = Follow.where(target_user_id: @user.id).count %>
         </div>
+      <% end %>
+
+      <% if @user == current_user %>
+        <%= link_to "Post", new_post_path, :class=> "new_post_user",data: {"turbolinks"=>false} %>
+      <% elsif @follow = Follow.find_by(user_id: current_user.id, target_user_id: params[:id])%>
+        <%= link_to "Following", user_follow_path(params[:id], @follow.id), :class=> "following_btn", :method => :delete %>
+      <% else %>
+        <%= link_to "Follow", user_follows_path(params[:id]), :class=> "follow_btn", :method => :post %>
       <% end %>
     </div>
 
