--- a/app/views/posts/follows.html.erb
+++ b/app/views/posts/follows.html.erb
@@ -30,6 +30,11 @@
           <%= l(post_follows.created_at, format: :short) %>
         </div>
         <%= link_to post_follows.content, post_path(post_follows), :class=> "post_content" %>
+        <br>
+        <% @photos = PostPhoto.where(post_id: post_follows.id) %>
+        <% @photos.each do |photo| %>
+          <div class="post_photo" style="background:url('<%= photo.image %>') center / contain; background-repeat:no-repeat;"></div>
+        <% end %>
         <div class="fav">
           <% if @fav_post = FavsPost.find_by(post_id: post_follows.id, user_id: current_user.id) %>
           <%= link_to(post_favs_post_path(post_follows.id, @fav_post.id), :method => :delete) do %>
