--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -23,6 +23,11 @@
           <%= l(post.created_at, format: :short) %>
         </div>
         <%= link_to post.content, post_path(post), :class=> "post_content" %>
+        <br>
+        <% @photos = PostPhoto.where(post_id: post.id) %>
+        <% @photos.each do |photo| %>
+          <div class="post_photo" style="background:url('<%= photo.image %>') center / contain; background-repeat:no-repeat;"></div>
+        <% end %>
         <div class="fav_top">
           <i class="far fa-heart like-btn">
             <% @favs_count = FavsPost.where(post_id: post.id).count %>
