--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,6 +60,11 @@
             <%= l(post.created_at, format: :short) %>
           </div>
           <%= link_to post.content, post_path(post), :class=> "post_content" %>
+          <br>
+          <% @photos = PostPhoto.where(post_id: post.id) %>
+          <% @photos.each do |photo| %>
+            <div class="post_photo" style="background:url('<%= photo.image %>') center / contain; background-repeat:no-repeat;"></div>
+          <% end %>
           <div class="fav">
             <% if @fav_post = FavsPost.find_by(post_id: post.id, user_id: current_user.id) %>
             <%= link_to(post_favs_post_path(post.id, @fav_post.id), :method => :delete) do %>
