--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </div>
 
-    <div class="container">
+    <div class="user_container">
       <%= form_for(@user, :html => {:multipart => true}) do  |f| %>
         <p>Name</p>
         <%= f.text_field :name %>
@@ -16,6 +16,7 @@
         <%= f.file_field :image %>
         <p>Email</p>
         <%= f.email_field :email %>
+        <br>
         <%= f.submit "Save" %>
       <% end %>
     </div>
