--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -37,6 +37,13 @@
     position:absolute; left:20px; top: 15px;
     color: white; text-decoration:none; font-size: 17px;
   }
+  .back_to_posts_admin {
+    position:absolute; left:145px; top: 11px;
+    color: white; text-decoration:none; font-size: 20px;
+    .home_button {
+      font-family: 'Lato', sans-serif; font-size: 18px;
+    }
+  }
 }
 
 .user{
