--- a/app/views/admins/index_users.html.erb
+++ b/app/views/admins/index_users.html.erb
@@ -14,7 +14,9 @@
   <div class="users_list">
     <% @users.each do |user| %>
       <div class="users-index-item">
-        id: <%= user.id %>&nbsp;&nbsp;<%= user.name %>
+        <%= link_to "users/#{user.id}", :class=>"link_to_user_info" do %>
+          id: <%= user.id %>&nbsp;&nbsp;<%= user.name %>
+        <% end %>
       </div>
     <% end %>
   </div>
