--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
       <li><%= link_to("Following", "/posts/follows") %></li>
   </ul>
 
-  <% @posts_all.each do |post_all| %>
+  <% @posts_all.includes(:post_photos).each do |post_all| %>
     <div class="posts-index-item">
       <div class="post-left">
         <% @image = User.select("image_name").find_by(id: post_all.user_id) %>
@@ -32,8 +32,7 @@
         </div>
         <%= link_to post_all.content, post_path(post_all), :class=> "post_content" %>
         <br>
-        <% @photos = PostPhoto.where(post_id: post_all.id) %>
-        <% @photos.each do |photo| %>
+        <% post_all.post_photos.each do |photo| %>
           <div class="post_photo" style="background:url('<%= photo.image %>') center / contain; background-repeat:no-repeat;"></div>
         <% end %>
         <div class="fav">
