--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div style="padding: 20px;"></div>
-  <% @posts.each do |post| %>
+  <% @posts.includes(:post_photos).each do |post| %>
     <div class="posts-index-item">
       <div class="post-left">
         <% @image = User.select("image_name").find_by(id: post.user_id) %>
@@ -24,8 +24,7 @@
         </div>
         <%= link_to post.content, post_path(post), :class=> "post_content" %>
         <br>
-        <% @photos = PostPhoto.where(post_id: post.id) %>
-        <% @photos.each do |photo| %>
+        <% post.post_photos.each do |photo| %>
           <div class="post_photo" style="background:url('<%= photo.image %>') center / contain; background-repeat:no-repeat;"></div>
         <% end %>
         <div class="fav_top">
