--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,12 +9,10 @@
 
     <div class="posts-index-item">
       <div class="post-left">
-        <% @image = User.select("image_name").find_by(id: @post.user_id) %>
         <img src="<%= "/user_images/#{@image.image_name}" %>">
       </div>
       <div class="post-right">
         <div class="post-user-name">
-          <% @user = User.select("name").find_by(id: @post.user_id) %>
           <%= link_to @user.name, user_path(@post.user_id) %>
         </div>
         <div class="date">
@@ -27,17 +25,15 @@
           <% end %>
         </div>
         <div class="fav">
-          <% if @fav_post = FavsPost.find_by(post_id: @post.id, user_id: current_user.id) %>
+          <% if @fav_post %>
             <%= link_to(post_favs_post_path(@post.id, @fav_post.id), :method => :delete) do %>
             <i class="far fa-heart unlike-btn">
-              <% @favs_count = FavsPost.where(post_id: @post.id).count %>
               <% if @favs_count != 0 %><%= @favs_count %><% end %>
             </i>
             <% end %>
           <% else %>
             <%= link_to(post_favs_posts_path(@post.id), :method => :post) do %>
               <i class="far fa-heart like-btn">
-                <% @favs_count = FavsPost.where(post_id: @post.id).count %>
                 <% if @favs_count != 0 %><%= @favs_count %><% end %>
               </i>
             <% end %>
