--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,12 +36,12 @@
             <% end %>
           </div>
           <div class="fav">
-            <% if (@favs_count = post.favs_posts.size) != 0 %>
+            <% if (post.favs_posts.size) != 0 %>
               <% @faved_by_current_user = false %>
               <% post.favs_posts.each do |favs_post| %>
                 <% if favs_post.user_id == current_user.id %>
                   <%= link_to(post_favs_post_path(post.id, favs_post.id), :method => :delete) do %>
-                  <i class="far fa-heart unlike-btn"><%= @favs_count %></i>
+                  <i class="far fa-heart unlike-btn"><%= post.favs_posts.size %></i>
                   <% end %>
                   <% @faved_by_current_user = true %>
                   <% break %>
@@ -49,7 +49,7 @@
               <% end %>
               <% if @faved_by_current_user == false %>
                 <%= link_to(post_favs_posts_path(post.id), :method => :post) do %>
-                <i class="far fa-heart like-btn"><%= @favs_count %></i>
+                <i class="far fa-heart like-btn"><%= post.favs_posts.size %></i>
                 <% end %>
               <% end %>
             <% else %>
